--- a/twitch.html
+++ b/twitch.html
@@ -21,10 +21,10 @@
       <div class="col-xs-1 col-md-2"></div>
       <div class="col-xs-10 col-md-8">
         <div id="mainDiv">
-          <button onclick="showOnline()">Live!</button>
-          <button onclick="showOffline()">Asleep</button>
-          <button onclick="showNotFound()">Dead</button>
-          <button onclick="showAll()">All</button>
+          <button class="btn" onclick="showOnline()">Live!</button>
+          <button class="btn" onclick="showOffline()">Asleep</button>
+          <button class="btn" onclick="showNotFound()">Dead</button>
+          <button class="btn" onclick="showAll()">All</button>
         </div>
         <div>
           <ul id="results">
