--- a/twitch.html
+++ b/twitch.html
@@ -13,13 +13,13 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h1>Twitch Users</h1>
+        <h1>Twitch.tv Channels</h1>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-xs-1 col-md-2"></div>
-      <div class="col-xs-10 col-md-8">
+      <div class="col-xs-2 col-md-3"></div>
+      <div class="col-xs-8 col-md-6">
         <div id="mainDiv">
           <button class="btn" onclick="showOnline()">Live!</button>
           <button class="btn" onclick="showOffline()">Asleep</button>
@@ -32,7 +32,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-xs-1 col-md-2"></div>
+      <div class="col-xs-2 col-md-3"></div>
     </div>
 
   </div>
