--- a/twitch.html
+++ b/twitch.html
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-xs-2 col-md-3"></div>
       <div class="col-xs-8 col-md-6">
-        <div id="mainDiv">
+        <div class="text-center">
           <button class="btn" onclick="showOnline()">Live!</button>
           <button class="btn" onclick="showOffline()">Asleep</button>
           <button class="btn" onclick="showNotFound()">Dead</button>
